--- a/services/pom.xml
+++ b/services/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>image-catalog</artifactId>
-        <groupId>si.fri.rso.samples</groupId>
+        <artifactId>ape-location</artifactId>
+        <groupId>si.ape.location</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>image-catalog-services</artifactId>
+    <artifactId>ape-location-services</artifactId>
 
     <dependencies>
         <dependency>
@@ -41,8 +41,8 @@
         </dependency>
 
         <dependency>
-            <groupId>si.fri.rso.samples</groupId>
-            <artifactId>image-catalog-models</artifactId>
+            <groupId>si.ape.location</groupId>
+            <artifactId>ape-location-models</artifactId>
         </dependency>
 
     </dependencies>
